# outer-expansion

./: LICENSE.md  README.md  mvloc.config.jsonc  pyproject.toml
.github/workflows/: nightly.yml
auxfiles-fr/data/aea_scripts/: aea_clone_crime.lua  aea_dark_justicier.lua  aea_race_cult.lua  aea_race_necro.lua  aea_race_old.lua  aea_shields.lua  aea_super_shields.lua
auxfiles-ru/data/: names.xml.append
auxfiles-ru/data/aea_scripts/: aeaIcon.lua  aea_clone_crime.lua  aea_dark_justicier.lua  aea_functions.lua  aea_race_acid.lua  aea_race_cult.lua  aea_race_necro.lua  aea_race_old.lua  aea_shields.lua  aea_super_shields.lua
locale-machine/data/autoBlueprints.xml.append/: fr.po  ja.po
locale-machine/data/blueprints.xml.append/: fr.po  ja.po
locale-machine/data/events_addon_icon.xml.append/: ja.po
locale-machine/data/events_sector_aea_acid.xml/: fr.po  ja.po
locale-machine/data/events_sector_aea_bird.xml/: fr.po  ja.po
locale-machine/data/events_sector_aea_cult.xml/: fr.po  ja.po
locale-machine/data/events_sector_aea_necro.xml/: fr.po  ja.po
locale-machine/data/events_sector_aea_old_1.xml/: fr.po  ja.po
locale-machine/data/events_sector_aea_old_2.xml/: fr.po  ja.po
locale-machine/data/events_sector_aea_old_3.xml/: fr.po  ja.po
locale-machine/data/events_special_aea_old.xml/: fr.po  (+1 more)
machine-json/: machine-fr-7.1.10.json  machine-ja-7.1.10.json  machine-ja-7.1.3.json  machine-ja-7.1.6.json
mergexmls-ru/data/: blueprints.xml.append
src-en/data/: aeap_necro_sepa_3.txt  blueprints.append.lua  events_special_multiverse.xml.append  hyperspace.xml.append
(+396 files in other folders)
